@@ -1,4 +1,8 @@
 TODO
+- Network Select 
+    - Check if can prio IP based on profile (e.g. LAN, WiFi)
+        - Fix: what if machine has multiple IPv4 address
+    - Test find command on 2 active network profiles
 - Make GUI 
     - Create background process for listening
     - Allow viewing of shared folder in network 
@@ -18,9 +22,8 @@ v0.1.3 - Event Logging
     x View logs
     x Save absolute file path in logs
     x Log filters (action, date, from, to, file regexp)
+    x Select network if multiple IP address
     - Finish early in detection if search param found
-    - Check if can prio IP based on profile (e.g. LAN, WiFi)
-        - Fix: what if machine has multiple IPv4 address
 v0.1.2 - Feature Updates 
     x Commit: 2026-01-16 16:35
     x Set defaultTimeout to 3s
